--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,15 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background {
+  background-color: blue;
+}
+
+.mobileFoto {
+  float: left;
+}
+
+.header {
+  float: left;
+}
