--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,7 +15,7 @@ body {
     left: 0;
     width: 100%;
     height: 50%;
-    background-color:#1c5380;
+    background-image: linear-gradient(#1c5380, #06365f);
 }
 
 .content {
@@ -43,14 +43,17 @@ body {
 .branding-right p {
   float: left;
 } 
-.log-in {
-  background-color: #1c5380;
+.button-log-in {
+  background-image: linear-gradient( #06365f, #1c5380);
   padding: 10px;
+  position: relative;
   border-radius: 2px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  float: left;
   margin-left: 38px;
   margin-top: 10px;
+  height: 50px;
+  width: 100px;
+  text-align: center;
+  color: white;
 }
 
 .content-right {
@@ -58,7 +61,8 @@ body {
   float: left;
   margin-left: 20px;
   background-image: url("../images/frame.png");
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
   margin-bottom: 20px;
 }
 
