--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,72 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+footer {
+  text-align: center;
+  position: absolute;
+  left: 200px;
+}
+
+li {
+  list-style-type: none;
+  float: left;
+  margin: auto 15px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.background {
+  background: #1c5380;
+  position: fixed;
+  top: 0;
+  height: 300px;
+  width: 100%;
+  z-index: -1;
+}
+
+.blue {
+  color: #06365f;
+  margin-top: 20px;
+}
+
+.float-left {
+  float: left;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.cover-img {
+  float: left;
+  margin: 100px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.content {
+  margin: 100px;
+  position: absolute;
+  left: 400px;
+}
+
+.text {
+  background: white;
+  box-shadow: 10px;
+  padding: 10px 40px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+button {
+  background: #1c5380;
+  border-color: #06365f;
+  border-width: 2px;
+  float: right;
+  padding: 10px;
+  margin-top: 17px;
+}
