--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,108 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background-top {
+  height:250px;
+  background-image:linear-gradient(#1c5380,#06365f);
+}
+
+.card {
+  width:875px;
+  height:505px;
+  position:relative;
+  top:-175px;
+  left:200px;
+}
+
+.phone-image {
+  margin-right: 50px;
+  width:20%;
+  position:relative;
+  float:left;
+}
+
+.logo-bar {
+  width:495px;
+  margin-top:20px;
+  box-sizing:border-box;
+  float:right;
+}
+
+.text-card{
+  background-image: url("../images/frame.png");
+  background-repeat:no-repeat;
+  width:504px;
+  float:right;
+  margin-top:10px;
+}
+
+.text-card h1{
+  margin: 20px 30px;
+  line-height: 1.3em;
+  color:#1c5380;
+  font-size:28px;
+}
+
+.text-card p{
+  margin: 10px 30px;
+  /* text-align:justify; */
+}
+
+.text-card img {
+  margin: 20px 0 0 30px;
+}
+
+.login-button {
+  width:100px;
+  height:50px;
+  border: 2px solid #06365f;
+  color:white;
+  background-image:linear-gradient(#1c5380,#06365f);
+  font-weight:600;
+  float:right;
+  padding-top:5px;
+  box-sizing:border-box;
+  font-size:12pt;
+  margin-top:10px;
+  margin-right:10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius:5%;
+}
+
+.login-button img {
+  margin: 5px 5px;
+  float:left;
+}
+
+.login-button span {
+  display:inline-block;
+  margin:5px;
+}
+
+.bold {
+  font-weight:700;
+}
+
+footer {
+  margin:auto;
+  width: 1200px;
+  position:relative;
+  top:-130px;
+  left: 130px;
+  text-transform:uppercase;
+  font-size:14px;
+}
+
+footer ul > li {
+  list-style:none;
+  float:left;
+  display:block;
+  margin: 0 10px;
+  color: #1c5380;
+  font-weight:700;
+}
+
+li.copyright {
+  color:darkgray;
+}
