--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,79 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+header {
+  background: #1c5380;
+  background-size: cover;
+  height: 40vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#landing {
+  margin-top: 180px;
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+}
+
+#landing .phones {
+  transform: scale(1.08);
+}
+
+.headline {
+  display: flex;
+  justify-content: space-between;
+}
+
+.headline button {
+  margin: 20px;
+  height: 60px;
+  width: 120px;
+  border: 1px solid #06365f;
+  background-image: linear-gradient(to top, #1c5380, lightblue);
+  color: white;
+  font-size: 1.1em;
+}
+
+.text {
+  background: url("../images/frame.png") no-repeat;
+  background-size: contain;
+  margin: 0;
+  padding: 20px 40px;
+  box-sizing: border-box;
+}
+
+.text h2 {
+  width: 300px;
+  color: #06365f;
+}
+
+footer {
+  margin-top: 30px;
+  width: 40%;
+}
+
+footer ul {
+  color: #1c5380;
+  font-size: 0.8em;
+  font-weight: 800;
+  text-transform: uppercase;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+footer #copyright-brand {
+  color: gray;
 }
