--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,10 +8,12 @@
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
  .bckgrnd {
   height:200px;
   background-color: #06365f;
 }
+
  .card {
   width:875px;
   height:505px;
@@ -19,16 +21,19 @@
   top:10px;
   left:200px;
 }
+
  .phones {
   position:relative;
   float:left;
 }
+
  .logo {
   width:495px;
   margin-top:20px;
   box-sizing:border-box;
   float:right;
 }
+
  .content{
   background-color: white;
   width: 500px;
@@ -37,15 +42,16 @@
   box-shadow: 1px 2px black; 
   border-radius:2%;
 }
+
  .content h1{
   margin: 20px 30px;
   color:#1c5380;
   font-size:30px;
   text-align: center;
 }
+
  .content p{
   margin: 10px 50px;
-
 }
 
  .login {
@@ -61,18 +67,18 @@
   box-shadow: 1px 2px black; 
   border-radius:5%;
 }
+
  .login img {
   margin: 5px 5px;
   weight: 50%;
   float:left;
 }
 
-
  li {
-  position: absulote;
+  position: relative;
   float: right;
   margin: 10px 15px;
   color: #1c5380;
   list-style: none;
-  top:1300px;
+  top: 350px;
 }
