--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -39,17 +39,18 @@ header {
 }
 
 .headline {
-  display: flex;
   padding: 0;
-  margin: 0;
+  margin: 30px 0 120px 0;
 }
 
-.headline .headline-img {
-  /* transform: scale(0.9); */
+.headline figure {
+  margin: 0;
+  padding: 0;
+  float: left;
 }
 
 .headline button {
-  margin: 20px;
+  margin: 0;
   height: 60px;
   width: 120px;
   border: 1px solid #06365f;
@@ -59,6 +60,7 @@ header {
   border-radius: 3px;
   align-self: right;
   cursor: pointer;
+  float: right;
 }
 
 .text {
