--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,71 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  border: 2px solid red;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+h2 {
+  color: #06365f;
+}
+
+.halfBack {
+  background-color: #1c5380;
+  height: 200px;
+}
+
+.photoImage {
+  float: left;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.outterDiv {
+  width: 700px;
+  margin: 100px auto;
+}
+
+.innerDiv {
+  width: 700px;
+  margin: auto;
+}
+
+.brand {
+  width: 200px;
+}
+
+.logInButton {
+  border-radius: 2%;
+  color: grey;
+  float: right;
+  padding: 5px;
+  margin: 5px;
+}
+
+.whiteBackground {
+  background-color: white;
+}
+
+.footer {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
+
+.list {
+  float: left;
+  margin: 0 auto;
+  color: #06365f;
+}
+
+li {
+  display: inline;
+  font-color: #06365f;
 }
