--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,111 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  background-color: #F5F4F5;
 }
+
+header {
+  background: #1c5380;
+  background-size: cover;
+  height: 40vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.container{
+  margin-top: 180px;
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+}
+
+.phone{
+  transform: scale(1.08);
+}
+
+.head-content{
+  padding: 0;
+  margin: 30px 0 120px 0px;
+}
+
+.head-content figure{
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+
+.head-content button{
+  margin: 0;
+  height: 60px;
+  width: 120px;
+  border: 1px solid #06365f;
+  background-image: linear-gradient(to top, #1c5380, lightblue);
+  color: white;
+  font-size: 1.1em;
+  border-radius: 3px;
+  align-self: right;
+  cursor: pointer;
+  float: right;
+}
+
+.content-text {
+  background: url("../images/frame.png") no-repeat;
+  background-size: contain;
+  margin: 0;
+  padding: 20px 40px;
+  box-sizing: border-box;
+}
+.content-text h2 {
+  width: 300px;
+  color: #06365f;
+}
+
+.content-text img {
+  cursor: pointer;
+}
+
+em{
+  font-weight: bold;
+}
+
+footer {
+  margin-top: 30px;
+  width: 40%;
+}
+
+footer ul {
+  color: #1c5380;
+  font-size: 0.56em;
+  font-weight: 800;
+  text-transform: uppercase;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+ul li {
+  margin: 0px 5px;
+}
+
+footer #copyright-brand {
+  color: gray;
+}
+
+
+
+
