--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,86 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
 }
+
+
+.bg {
+  background-color: #06365f;
+  height: 300px;
+}
+
+.brand-img {
+  padding-left: 0%;
+}
+
+.brand-img button {
+  position: relative;
+  bottom: 20px;
+}
+
+.brand-img button {
+  background-color: #1c5380;
+  border-radius: 5%;
+  border: 1px solid #1c5380;  
+  text-align: center;
+  width: 80px;
+  height: 35px;
+  color: white;
+  margin-left: 100px;
+}
+
+.div-container-2 {
+  width: 50%;
+  float: right;
+}
+
+.div-container-1 {
+  width: 50%;
+  float: left;
+}
+
+.div-geral {
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: -140px;
+}
+
+.text {
+  width: 70%;
+  background-image: url("/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/frame.png")
+}
+
+h2 {
+  padding: 10px 20px;
+  color: #1c5380;
+} 
+
+.text p {
+  padding: 10px 20px;
+}
+
+.button{
+  padding: 10px 20px;
+}
+
+footer li {
+  display: inline;
+  color: #1c5380;
+}
+
+footer ul {
+  text-align: center;
+  padding-top: 40px;
+  font-weight: 100px;
+}
+
+
+
