--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,92 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+header{
+  background-color: #1c5380;
+  background-size: cover;
+  height: 40vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#geral{
+  margin-top: 200px;
+  display: flex;
+  width: 70%;
+}
+
+.container{
+  position: relative;
+}
+.contenttop{
+  margin: 20px 0 110px 0;
+  padding: 0;
+}
+.contenttop img{
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+
+.contenttop button{
+  margin: 20px;
+  height: 45px;
+  width: 95px;
+  border: 1px solid #06365f;
+  background-image: linear-gradient(to top, #1c5380, lightblue);
+  color: white;
+  font-size: 1.1em;
+  border-radius: 3px;
+  align-self: right;
+  text-align: center;
+}
+
+.containerFigure{
+  border: 1px solid blue;
+  position: relative;
+  float: left;
+  display: flex;
+  width: 120px;
+  padding: 100px;
+}
+
+.content{
+  background-image: url('../images/frame.png') no-repeat;
+  background-size: contain;
+  margin: 0;
+  padding: 20px 40px;
+}
+.content h2{
+  width: 300px;
+  color: #06365f;
+}
+
+.container2{
+  height: 80px;
+  position: 0;
+  float: left;
+}
+
+.content{
+position: relative;
+top:-15px;
+}
+footer{
+  margin-top: 20px;
+  width: 40%;
+}
+footer li{
+  display: inline;
+  list-style-type: none;
+  font-size: 1.0em;
 }
