--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,108 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+  background-color: #06365f;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  z-index: -1;
+  color: #06365f;
+}
+
+/*section {
+  width: 900px;
+  margin-top: 100px;
+}*/
+
+h5 {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color:  #ffff;
+}
+
+footer {
+  width: 900px;
+  margin: 20% 40% 30% 30%;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+button {
+  background-color: #1c5380;
+  font-size: 0.8em;
+  padding: 6px 8px;
+  color: white;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-left: 45px;
+}
+
+li {
+  float: left;
+  list-style: none;
+  text-align: center;
+  margin-right: 25px;
+  text-decoration: none;
+}
+
+.clearfix {
+  clear: both;
+}
+
+
+.col-a {
+  float: left;
+  width: 40%;
+}
+
+.col-b {
+  float: left;
+  width: 50%;
+}
+
+.icon {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: left;
+}
+
+#img-frame {
+  z-index: -1;
+  position: absolute;
+}
+
+.text {
+  margin: 15px;
+  padding: 20px 60px 0 30px;
+}
+
+.move-up {
+  margin: -200px auto;
+  width: 80%;
+  overflow: hidden;
+}
+
+.logo-icon {
+  overflow: hidden;
+}
+
+.badges {
+  margin-top: 50px;
+  
+}
+
+.badge-google {
+  margin-left: 30px;
+}
+
+.copy {
+  color: darkgray;
+
 }
