--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,12 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.floated-element {
+
+  float: left;
+  height: 175px;
+  margin:  20px 20px 0;
+  padding: 10px;
+  width: 250px;
+}
