--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,6 +7,8 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom, #1c5380 35%, white 10%);
+  background-repeat: no-repeat;
 }
 .container{
   display:flex;
@@ -22,7 +24,7 @@ ul{
   display: flex;
   /* align-content: center; */
   justify-content: space-around;
-  margin: 50px 100px;
+  margin: 100px 250px;
 }
 a{
   text-decoration: none;
@@ -31,5 +33,28 @@ a{
   text-transform: uppercase;
 }
 footer{
-  height: 100px;
+font-size: 12px;
+}
+
+.content {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+
+}
+
+h1{
+  padding: 40px 40px 0 40px;
+}
+p{
+  padding: 0 450px 5px 40px;
+}
+
+.app {
+  padding-left: 4%;
+}
+
+button {
+  background-color: #1c5380;
+  border-block-end-color: #06365f;
+  margin-left: 5%;
 }
