--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,94 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+div{
+  display: flex;
+  justify-content: space-around;
+}
+
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 5%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+h2{
+  color: #06365f;
+  font-size: 40px;
+  text-align: left;
   margin: 0;
 }
+
+a{
+  text-decoration: none;
+}
+
+p{
+  margin: 5px;
+}
+
+.log-in{
+  padding: 0.5%;
+  height: 100%;
+  width: 15%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  background-color: #265d88;
+  background-size: cover;
+  font-weight: bold;
+  border: 1px solid #265d88;
+}
+
+.right{
+  width: 60%;
+}
+
+.middle{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.text{
+  flex-direction: column;
+  padding: 5%;
+}
+
+.app{
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  padding: 2% 2% 2% 4%;
+}
+
+.appbutton{
+  padding: 0;
+  border: none;
+
+}
+
+footer{
+  color: #d0d1d4;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 60%;
+  margin: 3% 25%;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+footer a{
+  color: #1c5380;
+}
+
