--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,100 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x; 
+}
+
+section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5% 15% 5%;
+}
+
+.content {
+  /* margin: 0 10%; */
+  width:  60%;
+}
+
+.content-login {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.content-text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 20px;
+}
+
+.border {
+  padding: 20px;
+}
+
+.border img {
+  margin-top: 60px;
+}
+
+p {
+  font-size: 15px;
+  font-weight: 300;
+  color: black;
+}
+
+span {
+  font-weight: bold;
+}
+
+h2 {
+  color: #06365f;
+  margin: 0;
+}
+
+
+.iphone {
+  margin-right: 15px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+li {
+  padding: 0 15px 50px;
+}
+
+a {
+  font-size: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #1c5380;
+  text-transform: uppercase;
+}
+
+.copyright {
+  color: lightgrey;
+} 
+
+.login {
+  display: flex;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.login p {
+  font-size: 15px;
+  padding-left: 5px;
+  color: #ccd9e4;
+  font-weight: 500;
 }
