--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,6 +7,8 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png") ;
+  background-repeat: repeat-x;
 }
 
 div{
@@ -17,7 +19,7 @@ div{
 .wrapper{
   display: flex;
   justify-content: center;
-  margin: 15% 7% 5% 7%;
+  margin: 100px 7% 0% 7%;
   height: 512px;
 }
 
@@ -33,7 +35,8 @@ div{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 475px;
+  min-width: 490px;
+  max-width: 490px;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -43,7 +46,24 @@ div{
   justify-content: space-between;
   align-items: stretch;
 
+
 }
+
+.right-content section{
+  background-image: url("../images/frame.png") ;
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: justify;
+  padding: 40px;
+}
+
+.right-content section h1{
+  /*margin-right: 145px;*/
+}
+
+/*.right-content section h1, p{*/
+  /*margin: 40px;*/
+/*}*/
 
 .right-header{
   display: flex;
@@ -52,9 +72,80 @@ div{
 }
 
 .log-button{
-  background-color: #1c5380;
+  background-color: #6f97b6;
   border-radius: 5px;
   height: 50%;
-  min-width: 84px;
+  width: 100px;
+  border: 1px solid #1c5380;
+  color: white;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 1px;
+  vertical-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), inset 1px 0 0 rgba(255,255,255,0.05), inset -1px 0 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(255, 255, 255, 0.1);
+}
 
+.log-button span{
+  padding-left: 1px;
+  font-size: 16px;
+}
+
+.download-buttons{
+  display: flex;
+  justify-content: flex-start;
+}
+
+
+.download-buttons img{
+  /*margin: 0 10px;*/
+  padding-left: 40px;
+}
+
+
+section h1{
+  color: #06365f;
+  font-size: 27px;
+  line-height: 32px;
+  margin: 0 130px 20px 0;
+}
+
+section p{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+footer{
+  margin-top: 80px;
+}
+
+footer ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer ul li{
+  list-style-type: none;
+  margin: 0 10px;
+
+}
+
+footer ul li a{
+  color: #1c5380;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+#copyright{
+  color: grey;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 700;
 }
