--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,19 +4,52 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
 
-.background {
-  background-color: blue;
+.upperBackgroundDiv {
+  background-color: #1c5380;
+  height: 250px;
+}
+
+.lowerBackgroundDiv {
+  background-color: white;
+}
+
+.wrapCard {
+  position: relative;
+
 }
 
 .mobileFoto {
   float: left;
 }
 
-.header {
+.Textheader {
+  float: right;
+}
+
+.captureText {
+  float: right;
+  background: url("../images/frame.png") 00 no repeat;
+}
+
+.footerNav {
+  position: relative;
   float: left;
+}
+
+.captureText.p {
+  color: #06365f;
+}
+
+.button {
+  color: white;
+  background-color: #1c5380; 
 }
