--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,83 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blueBackground {
+  background:#1c5380;
+  height: 250px;
+}
+
+.container{
+  position:relative;
+  top: -160px;
+  left:120px;
+  width: 800px;
+}
+
+.phones{
+  position:relative;
+  float:left;
+}
+
+.logobutton {
+  float:left;
+}
+
+.button {
+  float: right;
+}
+
+button{
+  background:#1c5380;
+  color:white;
+  border:1px solid #06365f;
+  border-radius:10px;
+  margin-top: 20px;
+  margin-left: 60px;
+  padding: 5px;
+}
+
+button img{
+  padding-right:10px;
+}
+
+/*
+Why does the white background move to the left?
+It seems to position itself relative to the container which I don't understand...
+*/
+
+.textbox{
+background-image: url(https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/frame.png);
+background-repeat: no-repeat;
+width: 760px;
+}
+
+.textbox h1{
+  color:#06365f;
+}
+
+.footer{
+  margin:auto;
+  width: 1200px;
+  position:relative;
+  top:-120px;
+  left: 130px;
+  text-transform:uppercase;
+  font-weight: 600;
+  font-size:14px;
+}
+
+.footer li{
+  list-style:none;
+  color:#1c5380;
+  float:left;
+  margin: 10px;
+}
+
+/*
+Why does the copyright text not turn grey?
+*/
+
+li .copyright{
+  color:lightgrey;
+}
