--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,107 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+body, html {
+  height: 100%;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+#master-container{
+  width: 100%;
+  height: 100%;
+}
+
+#banner{
+  background: #50779A;
+  background: linear-gradient(180deg, rgba(28,83,128,1) 0%, rgba(6,54,95,1) 100%);
+  height: 40%;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+#phone{
+  float: left;
+  height: 65%;
+}
+
+#logo{
+  width: 70%;
+  float: left;
+}
+
+#login{
+  width: 20%;
+  margin-top: 15px;
+  /* border: 1px solid rgb(17, 17, 17); */
+  padding:6px  5px;
+  float: left;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  background: linear-gradient(180deg, rgb(55, 101, 138) 0%, rgb(51, 84, 112) 100%);
+}
+
+
+#box-right{
+  height: 100%;
+  /* border: 1px solid green; */
+  float: right;
+  width: 60%;
+  padding: 0 9%;
+  box-sizing: border-box;
+  margin-right: 7%;
+}
+
+#sidebox{
+  float: right;
+  background: white;
+  /* border: 1px solid black; */
+  width: 100%;
+  padding: 4%;
+  box-sizing: border-box;
+  -webkit-box-shadow: 19px -17px 32px -8px rgba(0,0,0,0.18);
+-moz-box-shadow: 19px -17px 32px -8px rgba(0,0,0,0.18);
+box-shadow: 19px -17px 32px -8px rgba(0,0,0,0.18);
+}
+
+#sidebox h1{
+  font-size: 1.5em;
+  line-height: 2em;
+  color: #06365f;
+  margin: 0;
+}
+
+#container{
+  padding: 10% 0;
+  width: 80%;
+  margin: 0 10%;
+  position: absolute;
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+}
+
+footer{
+  clear: both;
+  color: grey;
+  width: 60%;
+  padding-top: 20px;
+  margin: 0 20% ;
+}
+
+footer a{
+  color: #1c5380;
+  text-decoration: none;
+}
+
+footer div{
+  margin: 10px 0 0;
+  display: flex;
+  justify-content: space-around;
 }
