--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -42,12 +42,14 @@ body {
   background-image: url('../images/frame.png');
   background-size: 100% 100%;
   float: left;
-  height: 400px;
+  height: 500px;
   padding: 60px;
 }
 
 #footer {
   float: left;
+  width: 100%;
+  text-align: center;
 }
 
 h2 {
@@ -72,8 +74,26 @@ h2 {
 
 ul {
   color: #26678B;
+  text-transform: uppercase;
 }
 
 li {
+  float: left;
   margin-right: 20px;
+}
+
+.buttonWithImage {
+  float: left;
+  margin-top: 20px;
+  margin-right: 20px;
+  border: 0px;
+  border-radius: 3px;
+  box-shadow: 0px 0px 5px rgb(4, 39, 59);
+  padding: 10px 10px 10px 40px;
+  font-family: Arial, Verdana;  
+  background: url('../images/bgtile.png');
+  background-color: #26678B;
+  color: azure;
+  font-weight: bold;
+  background-repeat:repeat-x;
 }
